2008-07-01  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: Etorrent now understands 'min interval' tracker responses.

	* SRC: Fix issues 45, 47.

2008-06-30  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: Implement etorrent:list/0 with help from Tuncer Ayaz.

	* SRC: Implement etorrent:help/0 for getting help from the system.

2008-06-28  Jesper Louis Andersen  <jlouis@ogre.home>

	* SRC: Implement support for incoming connections.

	* SRC: Etorrent now knows about seeding.

	* SRC: Fix Issue-3: Implement endgame support.

	* SRC: Fix Issue-42: Peer Queue Watermarking.

2008-06-27  Jesper Louis Andersen  <jlouis@succubus.home>

	* DOC: Added HACKING Document.

	* DOC: Started Changelog.

